--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -14,7 +14,9 @@
 
     <h1>Hello World!</h1>
 
- 
+    <div>
+        <meting-js server="tencent" type="playlist" id="7679023489" order="random" volume="0.2"></meting-js>
+    </div>
 
 
     {{ content }}
@@ -23,6 +25,25 @@
     <h1>Hello World!</h1>
 
     <h1>Hello World!</h1>
+
+
+    <div id="giscus">
+        <script type="text/javascript" src="https://giscus.app/client.js"
+            data-repo="Portgas-D-Asce/blog-web"
+            data-repo-id="R_kgDOJCta4g"
+            data-category="[在此输入分类名]"
+            data-category-id="DIC_kwDOJCta4s4CbvLE"
+            data-mapping="title"
+            data-strict="1"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="light"
+            data-lang="zh-CN"
+            crossorigin="anonymous"
+            async>
+        </script>
+    </div>
 
     <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
         <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
