--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -1,7 +1,39 @@
 ---
 layout: base1
 ---
-<div>
-    <meting-js server="tencent" type="playlist" id="7679023489" order="random" volume="0.2"></meting-js>
-</div>
 
+    <div class="container wh100">
+        <div class="motto color-white fontsz28">
+            <p>错的不是我，是这个世界</p>
+            <p>没有光明不幸吗？需要光明才是真正的不幸</p>
+            <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
+            <br><br><br><br>
+            Let's
+            <span class="destory">destory</span>
+            /
+            <span class="rebuild">rebulid</span>
+            the world.
+        </div>
+    </div>
+
+
+<style scoped>
+.container {
+    text-align: center;
+    background: url("../assets/image/home.jpg") no-repeat top right;
+    background-size: cover;
+}
+
+.motto {
+    padding: 30vh 5vw 0 5vw;
+    width: 50%;
+}
+
+.destory {
+    color: red;
+}
+
+.rebuild {
+    color: green;
+}
+</style>
