--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -9,6 +9,8 @@
   </head>
   <body>
 
+    {%- include header1.html -%}
+
     <h1>Hello World!</h1>
 
 
@@ -21,6 +23,8 @@
 
     {{ content }}
 
+
+    {%- include copyright1.html -%}
 
     <h1>Hello World!</h1>
 
@@ -43,6 +47,8 @@
             async>
         </script>
     </div>
+
+    {%- include footer1.html -%}
 
     <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
         <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
