--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -24,7 +24,8 @@
     {{ content }}
 
 
-    {%- include copyright1.html -%}
+    {% include copyright1.html %}
+    
 
     <h1>Hello World!</h1>
 
