--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    {%- include header1.html -%}
+    {%- include header.html -%}
 
     <h1>Hello World!</h1>
 
@@ -24,7 +24,7 @@
     {{ content }}
 
 
-    {% include copyright1.html %}
+    {%- include copyright1.html -%}
     
 
     <h1>Hello World!</h1>
