--- a/_includes/ footer1.html
+++ b/_includes/ footer1.html
@@ -3,6 +3,6 @@
         
     </div>
     <div class="copyright fontsz24">
-        Copyright &copy; {{ new Date().getFullYear() }} Devil ｜ 
+        Copyright &copy; Devil ｜ 
         <a href="https://beian.miit.gov.cn">陕 ICP 备 2024031775</a>
     </div>
