--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -17,10 +17,10 @@ layout: base1
     </div>
 
 
-<style>
+<style type="css/text">
 .container {
     text-align: center;
-    background: url("../assets/image/home.jpg") no-repeat top right;
+    background: url("/assets/image/home.jpg") no-repeat top right;
     background-size: cover;
 }
 
