--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -17,7 +17,7 @@ layout: base1
     </div>
 
 
-<style type="css/text">
+<style>
 .container {
     text-align: center;
     background: url("/assets/image/home.jpg") no-repeat top right;
