--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -91,29 +91,13 @@
             font-weight: bold;
         }
         </style>
-        
 
-    {%- include header.html -%}
-
-    <h1>Hello World!</h1>
-
-
-    <h1>Hello World!</h1>
-
-    <div>
+    <div id="music">
         <meting-js server="tencent" type="playlist" id="7679023489" order="random" volume="0.2"></meting-js>
     </div>
 
 
     {{ content }}
-
-
-    {%- include copyright1.html -%}
-    
-
-    <h1>Hello World!</h1>
-
-    <h1>Hello World!</h1>
 
 
     <div id="giscus">
