--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.5.1/build/styles/github.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css"/>
-    <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/image/favicon.ico" />
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css"/>
+    <link rel="shortcut icon" type="image/svg+xml" href="/assets/image/favicon.ico" />
     <title>Devil's blog</title>
   </head>
   <body>
@@ -117,7 +118,7 @@
         </script>
     </div>
 
-    {%- include footer.html -%}
+    {%- include footer1.html -%}
 
     <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
         <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
