--- a/_includes/ footer1.html
+++ b/_includes/ footer1.html
@@ -1,8 +1,8 @@
-<a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
-<div class="copyright fontsz24">
-        
-    </div>
+<div id="blog-footer">
+    <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
+    <div class="copyright fontsz24"></div>
     <div class="copyright fontsz24">
         Copyright &copy; Devil ｜ 
-        <a href="https://beian.miit.gov.cn">陕 ICP 备 2024031775</a>
+        <a href="https://beian.miit.gov.cn">陕</a>
     </div>
+</div>
