--- a/_includes/header1.html
+++ b/_includes/header1.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="fontsz36 font-bold"> {{ header.name }} </div>
-    <div class="fontsz20 font-bold"> {{ header.description}}</div>
+    <div class="fontsz36 font-bold"> xxxxxxxxxx </div>
+    <div class="fontsz20 font-bold"> yyyyyyyyyyy</div>
 </div>
 
