--- a/_layouts/base1.html
+++ b/_layouts/base1.html
@@ -118,7 +118,7 @@
         </script>
     </div>
 
-    {%- include footer1.html -%}
+    {%- include header1.html -%}
 
     <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
         <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
