--- a/_includes/header1.html
+++ b/_includes/header1.html
@@ -1,5 +1,20 @@
-<div class="header">
+<div class="blog-header">
     <div class="fontsz36 font-bold"> xxxxxxxxxx </div>
     <div class="fontsz20 font-bold"> yyyyyyyyyyy</div>
 </div>
 
+<el-header  class="blog-header ">
+    <Header :header="header"></Header>
+</el-header>
+
+<style>
+.blog-header {
+    height: 61.8vh;
+    padding-top: 26vh;
+    background-size: 100vw;
+    background: url("/assets/image/articles.jpg") no-repeat right top;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+}
+</style>
