--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: base1
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<!--<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
@@ -42,3 +42,23 @@ layout: base1
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+-->
+
+{%- include header1.html -%}
+
+<div id="giscus">
+    <script type="text/javascript" src="https://giscus.app/client.js"
+        data-repo="Portgas-D-Asce/blog-web"
+        data-repo-id="R_kgDOJCta4g"
+        data-category-id="DIC_kwDOJCta4s4CbvLE"
+        data-mapping="title"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+    </script>
+</div>
