--- a/_includes/header1.html
+++ b/_includes/header1.html
@@ -6,7 +6,7 @@
 <style>
 .blog-header {
     height: 61.8vh;
-    padding-top: 26vh;
+    padding: 0px;
     background-size: 100vw;
     background: url("/assets/image/articles.jpg") no-repeat right top;
     margin: 0 auto;
