--- a/_includes/header1.html
+++ b/_includes/header1.html
@@ -5,8 +5,8 @@
 
 <style>
 .blog-header {
-    height: 61.8vh;
-    padding: 0px;
+    height: 35.8vh;
+    padding-top: 26vh;
     background-size: 100vw;
     background: url("/assets/image/articles.jpg") no-repeat right top;
     margin: 0 auto;
