--- a/_includes/header1.html
+++ b/_includes/header1.html
@@ -1,10 +1,10 @@
-<div class="blog-header">
+<div id="header">
     <div class="fontsz36 font-bold"> xxxxxxxxxx </div>
     <div class="fontsz20 font-bold"> yyyyyyyyyyy</div>
 </div>
 
 <style>
-.blog-header {
+#header {
     height: 35.8vh;
     padding-top: 26vh;
     background-size: 100vw;
