--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,19 +46,5 @@ layout: base1
 
 {%- include header1.html -%}
 
-<div id="giscus">
-    <script type="text/javascript" src="https://giscus.app/client.js"
-        data-repo="Portgas-D-Asce/blog-web"
-        data-repo-id="R_kgDOJCta4g"
-        data-category-id="DIC_kwDOJCta4s4CbvLE"
-        data-mapping="title"
-        data-strict="1"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="light"
-        data-lang="zh-CN"
-        crossorigin="anonymous"
-        async>
-    </script>
-</div>
+
+{%- include comment1.html -%}
