--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,5 +46,14 @@ layout: base1
 
 {%- include header1.html -%}
 
+<div id="article">
+    {%- include copyright1.html -%}
+    {%- include comment1.html -%}
+</div>
 
-{%- include comment1.html -%}
+<style>
+#article {
+    margin: 0 auto;
+    width: 61.8vw;
+}
+</style>
