--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -48,6 +48,7 @@ layout: base1
 
 <div id="article">
     {%- include copyright1.html -%}
+    {{ content }}
     {%- include comment1.html -%}
 </div>
 
