--- a/_includes/ footer1.html
+++ b/_includes/ footer1.html
@@ -1,8 +1,15 @@
-<div id="blog-footer">
+<div id="footer">
     <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
     <div class="copyright fontsz24"></div>
-    <div class="copyright fontsz24">
-        Copyright &copy; Devil ｜ 
-        <a href="https://beian.miit.gov.cn">陕</a>
-    </div>
+    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>
 </div>
+
+<style>
+#footer {
+    z-index: 998;
+    height: 150px;
+    padding: 42px 0px 5px 0px;
+    background-color: #eee;
+    text-align: center;
+}
+</style>
