--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -52,6 +52,8 @@ layout: base1
     {%- include comment1.html -%}
 </div>
 
+{%- include header1.html -%}
+
 <style>
 #article {
     margin: 0 auto;
