--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -52,7 +52,7 @@ layout: base1
     {%- include comment1.html -%}
 </div>
 
-{%- include header1.html -%}
+{%- include footer1.html -%}
 
 <style>
 #article {
