--- a/_includes/ footer1.html
+++ b/_includes/ footer1.html
@@ -1,7 +1,8 @@
 <div id="footer">
-    <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
+    xxxxxxxxxxxxxxxx
+    <!--<a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
     <div class="copyright fontsz24"></div>
-    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>
+    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>-->
 </div>
 
 <style>
