--- a/_includes/footer1.html
+++ b/_includes/footer1.html
@@ -42,9 +42,9 @@
 
 <div id="footer">
     xxxxxxxxxxxxxxxx
-    <!--<a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
+    <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
     <div class="copyright fontsz24"></div>
-    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>-->
+    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>
 </div>
 
 <style>
