--- a/_includes/footer1.html
+++ b/_includes/footer1.html
@@ -41,10 +41,9 @@
 </footer>-->
 
 <div id="footer">
-    xxxxxxxxxxxxxxxx
     <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
-    <div class="copyright fontsz24"></div>
-    <div class="copyright fontsz24"> Copyright Devil <a href="https://beian.miit.gov.cn">陕</a></div>
+    <div class="fontsz24"></div>
+    <div class="fontsz24"> Copyright &copy; Devil <a href="https://beian.miit.gov.cn">陕</a></div>
 </div>
 
 <style>
