--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -1,5 +1,6 @@
 ---
 layout: base1
+author: "pk is a devil"
 ---
 <!--<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
@@ -46,6 +47,9 @@ layout: base1
 
 {%- include header1.html -%}
 
+<h1> {{ page.title }} </h1>
+
+<h1> {{ layout.author }} </h1>
 <div id="article">
     {%- include copyright1.html -%}
     {{ content }}
