--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -47,7 +47,7 @@ author: "pk is a devil"
 
 {%- include header1.html -%}
 
-<h1> {{ article1.title }} </h1>
+<h1> {{ page.url }} </h1>
 
 <h1> {{ layout.author }} </h1>
 <div id="article">
