--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -2,19 +2,20 @@
 layout: base1
 ---
 
-    <div class="container wh100">
-        <div class="motto color-white fontsz28">
-            <p>错的不是我，是这个世界</p>
-            <p>没有光明不幸吗？需要光明才是真正的不幸</p>
-            <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
-            <br><br><br><br>
-            Let's
-            <span class="destory">destory</span>
-            /
-            <span class="rebuild">rebulid</span>
-            the world.
-        </div>
+<div class="container wh100">
+    <div class="motto color-white fontsz28">
+        <p>错的不是我，是这个世界</p>
+        <p>没有光明不幸吗？需要光明才是真正的不幸</p>
+        <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
+        <br><br><br><br>
+        Let's
+        <span class="destory"><a href="/page">destory</a></span>
+        /
+        <span class="rebuild"><a href="/tag">rebulid</a></span>
+        the world.
     </div>
+</div>
+
 <style>
 .container {
     text-align: center;
