--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -9,9 +9,9 @@ layout: base1
         <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
         <br><br><br><br>
         Let's
-        <span class="destory"><a href="/page">destory</a></span>
+        <span class="destory"><a href="/page/">destory</a></span>
         /
-        <span class="rebuild"><a href="/tag">rebulid</a></span>
+        <span class="rebuild"><a href="/tag/">rebulid</a></span>
         the world.
     </div>
 </div>
