--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 layout: base1
 ---
 
-{%- include header1.html -%}
+{% include header1.html title="tag xxxxxxxxxxxxx" description="tag yyyyyyy" %}
 
 <h1> {{ page.url }} </h1>
 
