--- a/_layouts/home1.html
+++ b/_layouts/home1.html
@@ -19,7 +19,7 @@ layout: base1
 <style>
 .container {
     text-align: center;
-    background: url("/assets/image/home.jpg") no-repeat top right;
+    background: url(/assets/image/home.jpg) no-repeat top right;
     background-size: cover;
 }
 
