--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<!--
 <header class="site-header">
 
   <div class="wrapper">
@@ -25,3 +26,22 @@
     {%- endunless %}
   </div>
 </header>
+-->
+
+<div id="header">
+    <div class="fontsz36 font-bold"> {{ include.title ｜ "暂无标题"}} </div>
+    <div class="fontsz20 font-bold"> {{ include.description | "暂无描述" }}</div>
+</div>
+
+<style>
+#header {
+    height: 35.8vh;
+    padding-top: 26vh;
+    background-size: 100vw;
+    background: url(/assets/image/articles.jpg) no-repeat right top;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+}
+</style>
