--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: base
 ---
 
+<!--
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -59,3 +61,40 @@ layout: base
   {%- endif -%}
 
 </div>
+
+-->
+
+<div class="container wh100">
+    <div class="motto color-white fontsz28">
+        <p>错的不是我，是这个世界</p>
+        <p>没有光明不幸吗？需要光明才是真正的不幸</p>
+        <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
+        <br><br><br><br>
+        Let's
+        <span class="destory"><a href="/page/">destory</a></span>
+        /
+        <span class="rebuild"><a href="/tag/">rebulid</a></span>
+        the world.
+    </div>
+</div>
+
+<style>
+.container {
+    text-align: center;
+    background: url(/assets/image/home.jpg) no-repeat top right;
+    background-size: cover;
+}
+
+.motto {
+    padding: 30vh 5vw 0 5vw;
+    width: 50%;
+}
+
+.destory {
+    color: red;
+}
+
+.rebuild {
+    color: green;
+}
+</style>
