--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: base1
 author: "pk is a devil"
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
