--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,12 +1,14 @@
 ---
 layout: base
 ---
-<h1>Tag: {{ page.title }}</h1>
+
+<h1>Posts tagged with "{{ page.tag }}"</h1>
 
 <ul>
-  {% for post in page.posts %}
+  {% for post in site.tags[page.tag] %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>{{ post.date | date: "%B %d, %Y" }}</span>
     </li>
   {% endfor %}
 </ul>
