--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<h1>Posts tagged with "{{ page.tag }}"</h1>
+<h1>Posts tagged with "{{ page.url }}"</h1>
 
 <ul>
   {% for post in site.tags[page.tag] %}
