--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,13 +2,12 @@
 layout: base
 ---
 
-<h1>Posts tagged with "{{ page.url }}"</h1>
+<h1>Tag: {{ page.title }}</h1>
 
 <ul>
-  {% for post in site.tags[page.tag] %}
+  {% for post in page.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <span>{{ post.date | date: "%B %d, %Y" }}</span>
     </li>
   {% endfor %}
 </ul>
