--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,9 @@
 layout: base
 ---
 
+{%- include header.html -%}
+
+<div id="archive">
 <h1> {{ page.title }}</h1>
 
 <ul>
@@ -12,3 +15,7 @@ layout: base
     </li>
   {% endfor %}
 </ul>
+
+</div>
+
+{%- include footer.html -%}
