--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,18 +4,103 @@ layout: base
 
 {%- include header.html -%}
 
-<div id="archive">
-<h1> {{ page.title }}</h1>
+<el-row class="blog-abstracts">
+    <el-col :xs="1" :sm="1" :md="2" :lg="3" :xl="3"></el-col>
+    <el-col :xs="22" :sm="22" :md="20" :lg="18" :xl="18">
+        {% for post in page.posts %}
+            <el-row class="abstract">
+                <el-col :span="10">
+                    <img :src=" {{ post.image }} "/>
+                </el-col>
+                
+                <el-col :span="14" class="right">
+                    <el-row class="title fontsz28">
+                        <el-col :span="24">
+                            <router-link :to=" {{ post.url }} ">
+                                {{ post.title }}
+                            </router-link>
+                        </el-col>
+                    </el-row>
+    
+                    <!--<el-row class="tags">
+                        <el-col :span="24"> 
+                            <router-link v-for="tag in article.tags" 
+                                    :to="{ path: '/articles', query: {'tag': tag.name}}" class="tag">
+                                <el-tag class="ml-2" :type="get_random_tag_type()"> {{ tag.name }} </el-tag>
+                            </router-link>
+                        </el-col>
+                    </el-row>-->
+        
+                    <el-row>
+                        <el-col :span="24"> {{ post.description }} </el-col>
+                    </el-row>
+    
+                    <el-row class="statistic">
+                        <el-col :span="12"> 1970-01-01 00:00:00 </el-col>
+                        <el-col :span="12" style="text-align: right;">
+                            阅读 ( 1 ) | 
+                            拉胯 ( 1 ) | 
+                            点赞 ( 1 )
+                        </el-col>
+                    </el-row>
+                </el-col>
+            </el-row>
+        {% endfor %}
+    </el-col>
+</el-row>
 
-<ul>
-  {% for post in page.posts %}
+
+
+
+
+
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
       <p>{{ post.image }}</p>
     </li>
-  {% endfor %}
+    
 </ul>
 
 </div>
 
 {%- include footer.html -%}
+
+
+
+
+
+
+<style>
+.blog-abstracts {
+min-height: 80vmin;
+margin-top: 25px;
+}
+
+.abstract {
+box-shadow: 1px 1px 10px rgba(0,0,0,.2);
+border-bottom: 1px solid #eee;
+border-radius: 5px;
+margin-bottom: 30px;
+opacity:0.9;
+background-size: 50%;
+}
+
+.right {
+padding: 8px 15px !important;
+display: flex;
+flex-direction: column;
+}
+
+.tags {
+padding: 15px 0;
+}
+.tag {
+margin-right: 9px;
+}
+
+.statistic {
+padding: 10px 0px;
+margin-top: auto;
+}
+</style>
+
