--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.5.1/build/styles/github.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
+    <script src="https://unpkg.com/element-plus"></script>
     <link rel="stylesheet" href="/assets/fonts/iconfont.css"/>
     <link rel="shortcut icon" type="image/svg+xml" href="/assets/image/favicon.ico" />
     <title>Devil's blog</title>
