--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,54 +4,33 @@ layout: base
 
 {%- include header.html -%}
 
-<el-row class="blog-abstracts">
-    <el-col :xs="1" :sm="1" :md="2" :lg="3" :xl="3"></el-col>
-    <el-col :xs="22" :sm="22" :md="20" :lg="18" :xl="18">
-        {% for post in page.posts %}
-            <el-row class="abstract">
-                <el-col :span="10">
-                    <img src="{{ post.image }}"/>
-                </el-col>
-                
-                <el-col :span="14" class="right">
-                    <el-row class="title fontsz28">
-                        <el-col :span="24">
-                            <a href="{{ post.url }}"> {{ post.title }} </a>
-                        </el-col>
-                    </el-row>
-    
-                    <!--<el-row class="tags">
-                        <el-col :span="24"> 
-                            <router-link v-for="tag in article.tags" 
-                                    :to="{ path: '/articles', query: {'tag': tag.name}}" class="tag">
-                                <el-tag class="ml-2" :type="get_random_tag_type()"> {{ tag.name }} </el-tag>
-                            </router-link>
-                        </el-col>
-                    </el-row>-->
+<div class="blog-abstracts">
+    {% for post in page.posts %}
+    <div class="abstract">
+        <img src="{{ post.image }}"/>
         
-                    <el-row>
-                        <el-col :span="24"> {{ post.description }} </el-col>
-                    </el-row>
+        <a class="title fontsz28" href="{{ post.url }}"> {{ post.title }} </a>
+
+        <!--<div class="tags">
+            <div :span="24"> 
+                <router-link v-for="tag in article.tags" 
+                        :to="{ path: '/articles', query: {'tag': tag.name}}" class="tag">
+                    <el-tag class="ml-2" :type="get_random_tag_type()"> {{ tag.name }} </el-tag>
+                </router-link>
+            </div>
+        </div>-->
     
-                    <el-row class="statistic">
-                        <el-col :span="12"> 1970-01-01 00:00:00 </el-col>
-                        <el-col :span="12" style="text-align: right;">
-                            阅读 ( 1 ) | 
-                            拉胯 ( 1 ) | 
-                            点赞 ( 1 )
-                        </el-col>
-                    </el-row>
-                </el-col>
-            </el-row>
-        {% endfor %}
-    </el-col>
-</el-row>
+        <div> {{ post.description }} </div>
+
+        <div class="statistic">
+            <div :span="12"> 1970-01-01 00:00:00 </div>
+            <div :span="12" style="text-align: right;">阅读 ( 1 ) | 拉胯 ( 1 ) | 点赞 ( 1 ) </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 
 {%- include footer.html -%}
-
-
-
-
 
 
 <style>
