--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -35,35 +35,37 @@ layout: base
 
 <style>
 .blog-abstracts {
-min-height: 80vmin;
-margin-top: 25px;
+    min-height: 80vmin;
+    margin-top: 25px;
+    width: 75%;
 }
 
 .abstract {
-box-shadow: 1px 1px 10px rgba(0,0,0,.2);
-border-bottom: 1px solid #eee;
-border-radius: 5px;
-margin-bottom: 30px;
-opacity:0.9;
-background-size: 50%;
+    box-shadow: 1px 1px 10px rgba(0,0,0,.2);
+    border-bottom: 1px solid #eee;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    opacity:0.9;
+    background-size: 50%;
 }
 
 .right {
-padding: 8px 15px !important;
-display: flex;
-flex-direction: column;
+    padding: 8px 15px !important;
+    display: flex;
+    flex-direction: column;
 }
 
 .tags {
-padding: 15px 0;
+    padding: 15px 0;
 }
+
 .tag {
-margin-right: 9px;
+    margin-right: 9px;
 }
 
 .statistic {
-padding: 10px 0px;
-margin-top: auto;
+    padding: 10px 0px;
+    margin-top: auto;
 }
 </style>
 
