--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,8 +23,8 @@ layout: base
         <div> {{ post.description }} </div>
 
         <div class="statistic">
-            <div :span="12"> 1970-01-01 00:00:00 </div>
-            <div :span="12" style="text-align: right;">阅读 ( 1 ) | 拉胯 ( 1 ) | 点赞 ( 1 ) </div>
+            <div> 1970-01-01 00:00:00 </div>
+            <div style="text-align: right;">阅读 ( 1 ) | 拉胯 ( 1 ) | 点赞 ( 1 ) </div>
         </div>
     </div>
     {% endfor %}
@@ -38,6 +38,7 @@ layout: base
     min-height: 80vmin;
     margin-top: 25px;
     width: 75%;
+    text-align: center;
 }
 
 .abstract {
