--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -38,16 +38,16 @@ layout: base
     min-height: 80vmin;
     margin-top: 25px;
     width: 75%;
-    text-align: center;
 }
 
 .abstract {
     box-shadow: 1px 1px 10px rgba(0,0,0,.2);
     border-bottom: 1px solid #eee;
     border-radius: 5px;
-    margin-bottom: 30px;
+    margin: 0 auto 30px;
     opacity:0.9;
     background-size: 50%;
+    
 }
 
 .right {
