--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,8 +23,8 @@ layout: base
             <div> {{ post.description }} </div>
 
             <div class="statistic">
-                <div> 1970-01-01 00:00:00 </div>
-                <div style="text-align: right;">阅读 ( 1 ) | 拉胯 ( 1 ) | 点赞 ( 1 ) </div>
+                <span> 1970-01-01 00:00:00 </span>
+                <span style="text-align: right;">author:  {{ post.author }} </span>
             </div>
         </div>
     </div>
