--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -11,14 +11,13 @@ layout: base
         <div class="right">
             <a class="title fontsz28" href="{{ post.url }}"> {{ post.title }} </a>
     
-            <!--<div class="tags">
-                <div :span="24"> 
-                    <router-link v-for="tag in article.tags" 
-                            :to="{ path: '/articles', query: {'tag': tag.name}}" class="tag">
-                        <el-tag class="ml-2" :type="get_random_tag_type()"> {{ tag.name }} </el-tag>
-                    </router-link>
-                </div>
-            </div>-->
+            <div class="tags">
+                {% for tag in post.tags %}
+                <span> 
+                    <a href="tag/{{ tag }}" class="tag"> {{ tag }} </a>
+                </span>
+                {% endfor %}
+            </div>
 
             <div> {{ post.description }} </div>
 
