--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,7 +14,7 @@ layout: base
             <div class="tags">
                 {% for tag in post.tags %}
                 <span> 
-                    <a href="tag/{{ tag }}" class="tag"> {{ tag }} </a>
+                    <a href="/tag/{{ tag }}" class="tag"> {{ tag }} </a>
                 </span>
                 {% endfor %}
             </div>
