--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{%- include header.html title="{{ page.title }}" -%}
+{%- include header.html -%}
 
 <div class="blog-abstracts">
     {% for post in page.posts %}
