--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,7 +2,8 @@
 layout: base
 ---
 
-{%- include header.html -%}
+{% raw %}{% include header.html title=page.title %}{% endraw %}
+
 
 <div id="abstracts">
     {% for post in page.posts %}
