--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,7 +2,9 @@
 layout: base
 ---
 
-{% raw %}{% include header.html title=page.title %}{% endraw %}
+<div id="header">
+    <div class="fontsz36 font-bold"> {{ page.title }} </div>
+</div>
 
 
 <div id="abstracts">
@@ -35,6 +37,17 @@ layout: base
 
 
 <style>
+#header {
+    height: 35.8vh;
+    padding-top: 26vh;
+    background-size: 100vw;
+    background: url(/assets/image/articles.jpg) no-repeat right top;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+}
+
 #abstracts {
     margin: 0 auto;
     width: 61.8%;
