--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -26,7 +26,7 @@ layout: base
 
             <div class="statistic">
                 <span> 1970-01-01 00:00:00 </span>
-                <span style="text-align: right;">author:  {{ post.author }} </span>
+                <span style="float: right;">author:  {{ post.author }} </span>
             </div>
         </div>
     </div>
@@ -82,8 +82,7 @@ layout: base
 }
 
 #abstracts .statistic {
-    padding: 10px 0px;
-    margin-top: auto;
+    padding: 5px 0px;
 }
 </style>
 
