--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
 <div id="footer">
     <a class="iconfont icon-github" href="https://github.com/Portgas-D-Asce"></a>
     <div class="fontsz24"></div>
-    <div class="fontsz24"> Copyright &copy; Devil </div>
+    <div class="fontsz24"> Copyright &copy; Portgas·D·Asce </div>
 </div>
 
 <style>
