--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -94,7 +94,7 @@
 
     <script>
         document.addEventListener('keydown', function(event) {
-            if (event.key === 'M') {
+            if (event.key === 'm') {
                 const music = document.querySelector(".aplayer-pic");
                 music.click();
                 console.log('回车键被按下');
