--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -92,8 +92,11 @@
         document.addEventListener('keydown', function(event) {
             if (event.key === 'm') {
                 const music = document.getElementById('music');
-                music.style.display = 'none';
-                console.log('回车键被按下');
+                if(music.style.display === 'none') {
+                    music.style.display = 'block';
+                } else {
+                    music.style.display = 'none';
+                }
             } else if (event.key === 'Escape') {
                 console.log('ESC键被按下');
             }
