--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -71,6 +71,12 @@
         .font-bold {
             font-weight: bold;
         }
+
+        #music {
+            display: none;
+            position: fixed;
+            bottom: 0px;
+        }
         </style>
 
     <div id="music">
