--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -76,6 +76,7 @@
             display: none;
             position: fixed;
             bottom: 0px;
+            z-index: 999;
         }
         </style>
 
