--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -77,6 +77,7 @@
             position: fixed;
             bottom: 0px;
             z-index: 999;
+            width: 100%;
         }
         </style>
 
