--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,7 +15,11 @@ title: this is a demo
   {% endfor %}
 </ul>
 
+<!-- 1. 引入 ECharts 核心 -->
 <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+  
+<!-- 2. 引入 WordCloud 扩展 -->
+<script src="https://cdn.jsdelivr.net/npm/echarts-wordcloud@2.1.0/dist/echarts-wordcloud.min.js"></script>
 
 <div id="tags" class="chart"></div>
 
