--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/assets/fonts/iconfont.css"/>
     <link rel="shortcut icon" type="image/svg+xml" href="/assets/image/favicon.ico" />
-    <title>Portgas·D·Asce's blog</title>
+    {% seo %}
+    <!--<title>Portgas·D·Asce's blog</title>-->
   </head>
   <body>
 
