--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: base
         <p>一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
         <br><br><br><br>
         Let's
-        <span><a class="destory" href="/tags">destory</a></span>
+        <span><a class="destory" href="/tags.html">destory</a></span>
         /
-        <span><a class="rebuild" href="/categories">rebulid</a></span>
+        <span><a class="rebuild" href="/categories.html">rebulid</a></span>
         the world.
     </div>
 </div>
