--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -96,6 +96,11 @@
     <!--老版本包不能用了，要用新包-->
     <script src="https://unpkg.com/@xizeyoupan/meting@latest/dist/Meting.min.js"></script>
 
+    
+    
+    <script>window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };</script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+
     <script>
         document.addEventListener('keydown', function(event) {
             if (event.key === 'm') {
