--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
 <div id="giscus">
-    <script type="text/javascript" src="https://giscus.app/client.js"
+    <!--<script type="text/javascript" src="https://giscus.app/client.js"
         data-repo="Portgas-D-Asce/blog-web"
         data-repo-id="R_kgDOJCta4g"
         data-category-id="DIC_kwDOJCta4s4CbvLE"
@@ -10,6 +10,23 @@
         data-input-position="top"
         data-theme="light"
         data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+    </script>-->
+
+    <script src="https://giscus.app/client.js"
+        data-repo="portgas-d-asce/portgas-d-asce.github.io"
+        data-repo-id="R_kgDOOM_gVw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOOM_gV84Coe-m"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
         crossorigin="anonymous"
         async>
     </script>
