--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
     <link rel="stylesheet" href="/assets/fonts/iconfont.css"/>
     <link rel="shortcut icon" type="image/svg+xml" href="/assets/image/favicon.ico" />
     {% seo %}
