--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -15,5 +15,5 @@ layout: base
 </ul>
 
 <h1>
-knew how to do this, but have no time to do it, can you help me?
+have no time to do it, can you help me?
 </h1>
