--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,10 @@
 layout: base
 ---
 
-{%- include header.html -%}
+
+<div id="header">
+    <div class="fontsz36 font-bold"> {{ page.title }} </div>
+</div>
 
 <div id="article">
     {%- include copyright.html -%}
