--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: base
 
 <div id="header">
     <div class="fontsz36 font-bold"> {{ page.title }} </div>
+    <div class="fontsz24 font-bold"> {{ page.discription }} </div>
 </div>
 
 <div id="article">
@@ -16,6 +17,17 @@ layout: base
 {%- include footer.html -%}
 
 <style>
+#header {
+    height: 35.8vh;
+    padding-top: 26vh;
+    background-size: 100vw;
+    background: url(/assets/image/article.jpg) no-repeat right top;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+}
+
 #article {
     margin: 0 auto;
     width: 61.8vw;
