--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -25,7 +25,7 @@ layout: base
             <div class="description"> {{ post.description }} </div>
 
             <div class="statistic">
-                <span> 1970-01-01 00:00:00 </span>
+                <span> {{ post.date }} </span>
                 <span style="float: right;">author:  {{ post.author }} </span>
             </div>
         </div>
