--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -120,6 +120,7 @@
                 console.log('ESC键被按下');
             }
         });
+        hljs.highlightAll();
     </script>
     
   </body>
