--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 layout: base
 ---
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.5.1/build/styles/github.min.css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 
 <div id="header">
     <div class="fontsz36 font-bold"> {{ page.title }} </div>
@@ -14,6 +16,10 @@ layout: base
 </div>
 
 {%- include footer.html -%}
+
+<script>
+    hljs.highlightAll();
+</script>
 
 <style>
 #header {
@@ -114,7 +120,4 @@ h6:before {
     font-weight: inherit;
     line-height: inherit;
 }
-</style>
-
-
 </style>
