--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,6 +24,10 @@ layout: base
     hljs.highlightAll();
 </script>
 
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body);">
+</script>
+
 <style>
 #header {
     height: 35.8vh;
