--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -35,14 +35,6 @@
             transition: color 0.2s ease, border-color 0.2s ease, background 0.2s ease, opacity 0.2s ease
         }
         
-        .hljs {
-            line-height: 1.8em;
-            font-family: Consolas, Monaco, monospace;
-            tab-size: 4;
-            background-color: rgb(250, 250, 250);
-            font-size: 13px;
-        }
-        
         .wh100 {
             width: 100vw;
             height: 100vh;
@@ -75,48 +67,13 @@
         .font-bold {
             font-weight: bold;
         }
-
-        #music {
-            display: none;
-            position: fixed;
-            bottom: 0px;
-            z-index: 999;
-            width: 100%;
-        }
         </style>
     
     {{ content }}
 
-    <div id="music">
-        <meting-js server="tencent" type="playlist" id="7679023489" order="random" volume="0.2"></meting-js>
-    </div>
+    {%- include music.html -%}
 
-    <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
-        <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-    <script>
-        var meting_api = 'https://meting.xdevil.top/api?server=:server&type=:type&id=:id&auth=:auth&r=:r';
-    </script>
-    <!--老版本包不能用了，要用新包-->
-    <script src="https://unpkg.com/@xizeyoupan/meting@latest/dist/Meting.min.js"></script>
-    
-    <script>window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };</script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-
-    <script>
-        document.addEventListener('keydown', function(event) {
-            if (event.key === 'm') {
-                const music = document.getElementById('music');
-                if(music.style.display !== 'block') {
-                    music.style.display = 'block';
-                } else {
-                    music.style.display = 'none';
-                }
-            } else if (event.key === 'Escape') {
-                console.log('ESC键被按下');
-            }
-        });
-        hljs.highlightAll();
-    </script>
+    {%- include event.html -%}
     
   </body>
 </html>
