--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,6 +40,14 @@ layout: base
     overflow: hidden;
 }
 
+.hljs {
+    line-height: 1.8em;
+    font-family: Consolas, Monaco, monospace;
+    tab-size: 4;
+    background-color: rgb(250, 250, 250);
+    font-size: 13px;
+}
+
 #article {
     margin: 0 auto;
     width: 61.8vw;
