--- a/_includes/event.html
+++ b/_includes/event.html
@@ -11,16 +11,21 @@
             window.scrollTo({top: 0, behavior: 'smooth'});
         } else if (event.key === 'v') {
             window.scrollTo({top: document.body.scrollHeight , behavior: 'smooth'});
-        } else if(e.code === 'h') {
+        } else if(event.key=== 'h') {
             window.location.href = "/";
-        } else if(e.code === 'c') {
+            console.log("hhhhhhhh");
+        } else if(event.key === 'c') {
             window.location.href = "/categories.html";
-        } else if(e.code === 't') {
+            console.log("cccccccc");
+        } else if(event.key === 't') {
             window.location.href = "/tags.html";
-        } else if(e.code === 'p') {
+            console.log("ttttttttt");
+        } else if(event.key === 'p') {
+            console.log("ppppppppp");
             window.history.back();  // 后退
-        } else if(e.code === 'n') {
+        } else if(event.key === 'n') {
             window.history.forward();
+            console.log("nnnnnnnnn");
         }
     });
 </script>
