--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,8 +20,23 @@ layout: base
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"onload="renderMathInElement(document.body);">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body);">
 </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+      renderMathInElement(document.body, {
+        delimiters: [
+          {left: "$$", right: "$$", display: true},    // 块级公式
+          {left: "$", right: "$", display: false},     // 行内公式
+          {left: "\\(", right: "\\)", display: false}, // 行内公式
+          {left: "\\[", right: "\\]", display: true}   // 块级公式
+        ],
+        throwOnError: false
+      });
+    });
+    </script>
 
 <style>
 #header {
