--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -20,13 +20,10 @@ layout: base
 
 <script>
 const tags_data = [
-    {% for tag in site.tags %}
-    {
-        name: '{{ tag[0] }}',
-        value: {{ tag[1].size }}
-    }{% unless forloop.last %},{% endunless %}
-    {% endfor %}
-  ];
+    {% for tag in site.tags %} {
+        name: {{ tag[0] }}, value: {{ tag[1].size }}
+    }{% unless forloop.last %},{% endunless %}{% endfor %}
+];
 
 const chart = echarts.init(document.getElementById('tags'));
 chart.setOption({
