--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,11 +10,15 @@ layout: base
 
 <div id="tags" class="wh100"></div>
 
+
 <script>
 const tags_data = [
-    {% for tag in site.tags %} {
-        name: {{ tag[0] }}, value: {{ tag[1].size }}
-    }{% unless forloop.last %},{% endunless %}{% endfor %}
+    {% for tag in site.tags %}
+    {
+        name: '{{ tag[0] }}',
+        value: {{ tag[1].size }}
+    }{% unless forloop.last %},{% endunless %}
+    {% endfor %}
 ];
 
 const chart = echarts.init(document.getElementById('tags'));
