--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -11,6 +11,7 @@ layout: base
       <a href="/category/{{ category[0] | slugify }}">{{ category[0] }}</a>
       ({{ category[1].size }} posts)
       {{ page.categories }}
+      {{ post.categories }}
     </li>
   {% endfor %}
 </ul>
