--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -10,7 +10,7 @@ layout: base
 <div id="abstracts">
     {% for post in page.posts %}
     <div class="abstract">
-        <img src="{{ post.image }}" loading="lazy"/>
+        <img src="{{ post.image }}" loading="lazy" style="min-height: 400px;"/>
         <div class="right">
             <a class="title fontsz28" href="{{ post.url }}"> {{ post.title }} </a>
     
